2011-05-17  Ivan Maidanski  <ivmai@mail.ru>

	* pthread_support.c (GC_delete_gc_thread): Rename "gc_id" local
	variable to "t".
	* win32_threads.c (GC_delete_gc_thread): Ditto.
	* pthread_support.c (pthread_join, pthread_detach,
	pthread_cancel): Rename "thread_gc_id" local variable to "t".
	* win32_threads.c (GC_pthread_detach): Ditto.
	* win32_threads.c (GC_delete_gc_thread): Remove "gc_nvid" local
	variable.
	* win32_threads.c (GC_pthread_join): Rename "joinee" local
	variable to "t".

2011-05-16  Ivan Maidanski  <ivmai@mail.ru>

	* pthread_stop_world.c (pthread_sigmask): Undefine even if not
	DEBUG_THREADS.
	* pthread_stop_world.c (GC_unblock_gc_signals): New function (only
	if GC_EXPLICIT_SIGNALS_UNBLOCK).
	* pthread_support.c (GC_unblock_gc_signals): New prototype.
	* pthread_support.c (GC_register_my_thread_inner,
	GC_register_my_thread): Call GC_unblock_gc_signals (only if
	GC_EXPLICIT_SIGNALS_UNBLOCK); add comment.
	* include/private/gcconfig.h (GC_EXPLICIT_SIGNALS_UNBLOCK): New
	macro.

2011-05-16  Ivan Maidanski  <ivmai@mail.ru>

	* pthread_stop_world.c (GC_suspend_handler_inner): Remove "dummy",
	"sig" local variables; rename my_thread local variable to "self".

2011-05-13  Ivan Maidanski  <ivmai@mail.ru>

	* tests/threadkey_test.c (LIMIT): Use smaller value (don't create
	more than 30 in parallel by default).

2011-05-13  Ivan Maidanski  <ivmai@mail.ru>

	* tests/threadkey_test.c (key_once, main): Work around for Solaris
	PTHREAD_ONCE_INIT.
	* tests/threadkey_test.c (LIMIT): Use smaller value for Solaris.

2011-05-13  Ivan Maidanski  <ivmai@mail.ru>

	* dyn_load.c (GC_FirstDLOpenedLinkMap): Remove unused "r" local
	variable.
	* pthread_support.c (GC_unregister_my_thread_inner): Revert back
	GC_remove_specific invocation; add a comment.
	* include/private/thread_local_alloc.h (GC_remove_specific):
	Revert back.
	* specific.c: Expand all tabs to spaces.
	* specific.c (slow_getspecific): Cast qtid to AO_t.